@@ -1,3 +1,8 @@
+Thu Dec  4 22:44:39 2008  Arnold D. Robbins  <arnold@skeeve.com>
+
+	* Makefile.am (closebad): New test.
+	* closebad.awk, closebad.ok: New files.
+
 Thu Jul 31 21:44:21 2008  Arnold D. Robbins  <arnold@skeeve.com>
 
 	* Makefile.am (match3, gsubtst6): New tests.
